--- a/index.html
+++ b/index.html
@@ -114,11 +114,8 @@
       font-weight: bold;
     }
    
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
+    .header h1 {
+      animation: headerAnimation 5s infinite;
     }
 
     .header:hover .search-bar {
@@ -178,6 +175,7 @@
       <input type="text" id="search-bar" class="search-bar" placeholder="Search by product name">
     </div>
   </header>
+
 
   <div class="category-container">
     <nav>
