--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         <li class="category"><a href="#jackets">Jackets</a></li>
         <li class="category"><a href="#hoodies">Hoodies</a></li>
         <li class="category"><a href="#other">Other</a></li>
+        <li class="category"><a href="#stores">Stores</a></li>
       </ul>
     </nav>
   </div>
