--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       text-align: center;
       margin-right: -200px;
       margin-top: -60px; /* Increase the margin-top value to move the title higher */
-      font-size: 70px;
+      font-size: 110px;
     }
 
     nav {
@@ -187,14 +187,33 @@
       transform: scale(1.05);
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
     }
+    .ghost {
+      position: absolute;
+      top: 100px; /* Adjust the top position as needed */
+      right: 770px; /* Adjust the left position as needed */
+      width: 76px;
+      height: 70px;
+    }
+    .orange {
+      position: absolute;
+      top: 800px; /* Adjust the top position as needed */
 
+    
+    }
     #products-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: flex-start;
       align-items: flex-start;
     }
+    .gradient-text {
+      background: linear-gradient(to right, rgb(255, 122, 0), rgb(235, 149, 69));
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+    }
   </style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:400,500,700"> <!-- Link to the Google Fonts CSS -->
 </head>
 
 <body>
@@ -202,12 +221,14 @@
   <header>
     <div class="header">
       <div class="header-title">
-        <h1>Hauled</h1>
+        <h1 class="gradient-text">HAULED</h1>
         <input type="text" id="search-bar" class="search-bar" placeholder="Search by product name">
       </div>
       <button class="discount-btn" onclick="location.href='https://pandabuy.page.link/LHKBYQLXZuTqtw6p9'">
         DISCOUNT SHIPPING SIGNUP
       </button>
+      <img src="image 1.png" alt="hauledghost" class="ghost">
+      <img src="Group 1 (5).png" alt="hauledorange" class="orange">
     </div>
   </header>
 
