hopefully fixed scroll issue

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       height: 70px;
     }
     .orange {
-      position: absolute;
+      position: fixed;
       top: 800px; /* Adjust the top position as needed */
 
     
