--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       background-color: #272822;
       color: #fff;
-      font-family: Arial, sans-serif;
+      font-family: Rubik, sans-serif;
       padding: 20px;
     }
 
@@ -152,6 +152,33 @@
       .search-bar {
         width: 100%;
       }
+      h1 {
+      text-align: center;
+   
+      margin-top: -60px; /* Increase the margin-top value to move the title higher */
+      font-size: 70px;
+
+      .orange {
+      position: fixed;
+     top: 400px; /* Adjust the top position as needed */
+    }
+    }
+    
+    .discount-btn {
+  padding: 8px 16px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 0 0 rgba(255, 255, 255, 0);
+  position: absolute; /* Use absolute positioning */
+  top: 20px; /* Adjust the top position as needed */
+  left: 50%; /* Adjust the left position as needed */
+  transform: translateX(-50%); /* Center horizontally */
+  text-align: center; /* Center the button text */
+}
+
     }
 
     .category-container {
